--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "detect-package-manager",
   "version": "1.0.0",
-  "description": "Detect which package you&#39;re using (yarn or npm)",
+  "description": "Detect which package manager you're using (yarn or npm)",
   "repository": {
     "url": "egoist/detect-package-manager",
     "type": "git"
@@ -9,6 +9,13 @@
   "main": "index.js",
   "files": [
     "index.js"
+  ],
+  "keywords": [
+    "npm",
+    "yarn",
+    "package-manager",
+    "detect",
+    "check"
   ],
   "scripts": {
     "test": "npm run lint && ava",
