--- a/package.json
+++ b/package.json
@@ -6,33 +6,43 @@
     "url": "egoist/detect-package-manager",
     "type": "git"
   },
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "default": "./dist/index.mjs"
+    }
+  },
   "files": [
-    "index.js"
+    "dist"
   ],
   "keywords": [
     "npm",
     "yarn",
     "package-manager",
     "detect",
-    "check"
+    "check",
+    "pnpm"
   ],
   "scripts": {
-    "test": "npm run lint && ava",
-    "lint": "xo"
+    "build": "tsup src/index.ts --format esm,cjs --dts",
+    "test": "node -r sucrase/register test.ts",
+    "prepublishOnly": "npm run build"
   },
   "author": "egoist <0x142857@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "execa": "^0.8.0",
-    "path-exists": "^3.0.0"
+    "execa": "^5.1.1"
   },
   "devDependencies": {
-    "ava": "^0.21.0",
-    "eslint-config-rem": "^3.0.0",
-    "xo": "^0.18.0"
+    "ava": "^3.15.0",
+    "sucrase": "^3.20.3",
+    "tsup": "^5.4.4",
+    "typescript": "^4.4.4",
+    "uvu": "^0.5.2"
   },
-  "xo": {
-    "extends": "rem"
+  "engines": {
+    "node": ">=12"
   }
 }
