--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "execa": "^5.1.1"
   },
   "devDependencies": {
+    "@types/node": "^16.11.4",
     "ava": "^3.15.0",
     "sucrase": "^3.20.3",
     "tsup": "^5.4.4",
