--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "module": "dist/index.mjs",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "require": "./dist/index.js",
       "default": "./dist/index.mjs"
     }
